@@ -13,13 +13,14 @@
         <h2.version>1.4.199</h2.version>
         <source.version>17</source.version>
         <target.version>17</target.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.16</version>
+            <version>1.18.22</version>
         </dependency>
 
         <dependency>
@@ -73,6 +74,7 @@
 
     </dependencies>
     <build>
+        <finalName>javatrain</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -80,6 +82,9 @@
                 <configuration>
                     <source>${source.version}</source>
                     <target>${target.version}</target>
+                    <compilerArgs>
+                        <arg>--add-exports=java.base/sun.security.jca=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
